--- a/views/sides/update.hbs
+++ b/views/sides/update.hbs
@@ -23,11 +23,11 @@
                     <div class="card m-b-30">
                         <div class="card-body">
 
-                        <h4 class="mt-0 header-title">Sửa thông thông tin của sản phẩm cần cập nhật</h4>
-                        </p>
+                            <h4 class="mt-0 header-title">Sửa thông thông tin của sản phẩm cần cập nhật</h4>
 
-                        <!-- Form -->
-                        <input type="hidden" value="{{_id}}" id="id" name="id"/>
+                            <!-- Form -->
+                            <input type="hidden" value="{{_id}}" id="id" name="id"/>
+                            <form method="POST" action="/manage-sides/update/{{_id}}" enctype="multipart/form-data">
                                 <div class="form-group">
                                     <label>Tên</label>
                                     <input type="text" class="form-control" required placeholder="Tên sản phẩm" name="name" id="name" value="{{name}}"/>
@@ -35,9 +35,8 @@
 
                                 <div class="form-group col-sm-2 img-picker-container"> 
                                     <label>Ảnh đại diện</label>
-                                    <div class="img-picker"></div>
+                                    <div class="img-picker" id="avatarPicker"></div>
                                 </div> 
-
 
                                 <div class="form-group">
                                     <label>Mô tả</label>
@@ -49,12 +48,12 @@
                                 <div class="form-group img-picker-container"> 
                                     <label>Ảnh mô tả</label>
                                     <div class="row">
-                                    <div class="img-picker col-sm-2"></div>
-                                    <div class="img-picker col-sm-2"></div>
-                                    <div class="img-picker col-sm-2"></div>
-                                    <div class="img-picker col-sm-2"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker1"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker2"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker3"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker4"></div>
+                                    </div>
                                 </div>
-                                </div> 
 
                                 <div class="form-group">
                                     <label>Giá tiền</label>
@@ -74,17 +73,18 @@
 
                                 <div class="form-group">
                                     <div>
-                                        <button class="btn btn-primary waves-effect waves-light" onclick="sendInfo()">
+                                        <button type="submit" class="btn btn-primary waves-effect waves-light">
                                             Cập nhật
                                         </button>
+
                                         <a href="/manage-sides">
-                                        <button type="reset" class="btn btn-secondary waves-effect m-l-5">
-                                            Bỏ qua
-                                            
-                                        </button>
+                                            <button type="reset" class="btn btn-secondary waves-effect m-l-5">
+                                                Bỏ qua
+                                            </button>
                                         </a>
                                     </div>
                                 </div>
+                            </form>
                         </div>
                     </div>
                 </div> <!-- end col -->
@@ -97,60 +97,3 @@
         © 2019 Stexo <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</span>.
     </footer>
 </div>
-
-<script>
-    function sendInfo()
-    {
-        const id = document.getElementById("id").value;
-
-        const name = document.getElementById("name");
-
-        if (name.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Tên Sản Phẩm")
-            return false
-        }
-
-        const description = document.getElementById("description");
-
-        if (description.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Mô Tả Sản Phẩm")
-            return false
-        }
-
-        const price = document.getElementById("price");
-
-        if (price.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Giá Sản Phẩm")
-            return false
-        }
-
-        const form = document.createElement("form");
-        form.method = "POST";
-        form.action = "/manage-sides/update/" + id;
-
-        const inputID = document.createElement("input")
-        inputID.name = "id"
-        inputID.value = id
-
-        form.appendChild(inputID)
-
-        const inputName = document.createElement("input");
-        inputName.name = "name";
-        inputName.value = name.value;
-        form.appendChild(inputName);
-
-        const inputDescription = document.createElement("input");
-        inputDescription.name = "description";
-        inputDescription.value = description.value;
-        form.appendChild(inputDescription);
-
-        const inputPrice = document.createElement("input");
-        inputPrice.name = "price";
-        inputPrice.value = price.value;
-        form.appendChild(inputPrice);
-
-        document.body.appendChild(form);
-
-        form.submit();
-    }
-</script>
