--- a/views/drinks/update.hbs
+++ b/views/drinks/update.hbs
@@ -35,7 +35,7 @@
 
                                 <div class="form-group col-sm-2 img-picker-container"> 
                                     <label>Ảnh đại diện</label>
-                                    <div class="img-picker" id="avatarPicker"></div>
+                                    <div class="img-picker" id="avatarPicker" data-url="{{avatar}}"></div>
                                 </div> 
 
                                 <div class="form-group">
@@ -47,12 +47,20 @@
 
                                 <div class="form-group img-picker-container"> 
                                     <label>Ảnh mô tả</label>
-                                    <div class="row">
-                                        <div class="img-picker col-sm-2" id="descriptionPicker1"></div>
-                                        <div class="img-picker col-sm-2" id="descriptionPicker2"></div>
-                                        <div class="img-picker col-sm-2" id="descriptionPicker3"></div>
-                                        <div class="img-picker col-sm-2" id="descriptionPicker4"></div>
-                                    </div>
+                                    {{#if (hasImage)}}
+                                        <div class="row">
+                                        {{#each images}}
+                                            <div class="img-picker col-sm-2" id="descriptionPicker{{index @index}}" data-url="{{src}}"></div>
+                                        {{/each}}
+                                        </div>
+                                    {{else}}
+                                        <div class="row">
+                                            <div class="img-picker col-sm-2" id="descriptionPicker1" data-url=""></div>
+                                            <div class="img-picker col-sm-2" id="descriptionPicker2" data-url=""></div>
+                                            <div class="img-picker col-sm-2" id="descriptionPicker3" data-url=""></div>
+                                            <div class="img-picker col-sm-2" id="descriptionPicker4" data-url=""></div>
+                                        </div>   
+                                    {{/if}}
                                 </div>
 
                                 <div class="form-group">
